<resources>
    <string name="app_name">WorldHero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Elad Navas</string>
    <string name="nav_header_subtitle">Rank: Beginner Hero</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_learn">Learn</string>
    <string name="menu_take_action">Take Action</string>
    <string name="menu_events">Events</string>
    <string name="menu_charities">Charities</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
