<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/baseline_school_black_24"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_action"
            android:icon="@drawable/baseline_done_black_24"
            android:title="@string/menu_take_action" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/baseline_today_black_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_charities"
            android:icon="@drawable/baseline_how_to_vote_black_24"
            android:title="@string/menu_charities" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
